<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".view.fragments.startNewGame.StartNewGameFragment">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.example.triklandroidassessment.view.fragments.startNewGame.StartNewGameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/images"
        android:layout_height="match_parent">

        <include
            android:id="@+id/header"
            layout="@layout/start_new_game_header"
            app:viewModel="@{viewModel}"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
           >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/quiz_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/ongoingQuestionNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:text="@string/question_x_of_y"
                    android:textColor="@color/whiteGrey"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/progress"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/timerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:text="@string/timer"
                    android:textColor="@color/whiteGrey"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/progress"
                    app:layout_constraintEnd_toStartOf="@+id/timer"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:text="@string/_0_sec"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/whiteGrey"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/progress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="10"
                    app:indicatorColor="@color/orange"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>



                <androidx.constraintlayout.widget.ConstraintLayout
                   android:id="@+id/section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/quiz_header"

                    android:padding="10dp">


                    <TextView
                        android:id="@+id/ongoingQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineHeight="30dp"
                        android:text=""
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="italic|bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ProgressBar
                        android:id="@+id/progress1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminateTint="@color/orange"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteY="10dp" />

                    <LinearLayout
                        android:id="@+id/badge"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:background="@drawable/rounded_corner_badge"
                        app:layout_constraintEnd_toEndOf="@+id/ongoingQuestion"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ongoingQuestion">

                        <TextView
                            android:id="@+id/marks"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lineHeight="25dp"
                            android:text="@string/_10_points"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="15sp" />
                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>


            <ProgressBar
                android:id="@+id/progress2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/optionsRecyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/optionsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/section"
                tools:itemCount="4"
                tools:listitem="@layout/options_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noDataContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/quiz_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/no_data_found"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:background="@drawable/rounded_corner_submit_btn"
            android:onClick="@{() ->viewModel.retryData()}"
            android:text="@string/retry"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />



    </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>